src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Acierta__c</fullName>
        <label>Acierta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actividad_economica__c</fullName>
        <label>Actividad económica</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Otra</fullName>
                    <default>true</default>
                    <label>Otra</label>
                </value>
                <value>
                    <fullName>Agropecuaria</fullName>
                </value>
                <value>
                    <fullName>Comercio</fullName>
                </value>
                <value>
                    <fullName>Construcción</fullName>
                </value>
                <value>
                    <fullName>Educación</fullName>
                </value>
                <value>
                    <fullName>Salud</fullName>
                </value>
                <value>
                    <fullName>Servicios</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ano_inicio_de_empleo_o_negocio__c</fullName>
        <label>Año inicio de empleo o negocio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1948</fullName>
                </value>
                <value>
                    <fullName>1949</fullName>
                </value>
                <value>
                    <fullName>1950</fullName>
                </value>
                <value>
                    <fullName>1951</fullName>
                </value>
                <value>
                    <fullName>1952</fullName>
                </value>
                <value>
                    <fullName>1953</fullName>
                </value>
                <value>
                    <fullName>1954</fullName>
                </value>
                <value>
                    <fullName>1955</fullName>
                </value>
                <value>
                    <fullName>1956</fullName>
                </value>
                <value>
                    <fullName>1957</fullName>
                </value>
                <value>
                    <fullName>1958</fullName>
                </value>
                <value>
                    <fullName>1959</fullName>
                </value>
                <value>
                    <fullName>1960</fullName>
                </value>
                <value>
                    <fullName>1961</fullName>
                </value>
                <value>
                    <fullName>1962</fullName>
                </value>
                <value>
                    <fullName>1963</fullName>
                </value>
                <value>
                    <fullName>1964</fullName>
                </value>
                <value>
                    <fullName>1965</fullName>
                </value>
                <value>
                    <fullName>1966</fullName>
                </value>
                <value>
                    <fullName>1967</fullName>
                </value>
                <value>
                    <fullName>1968</fullName>
                </value>
                <value>
                    <fullName>1969</fullName>
                </value>
                <value>
                    <fullName>1970</fullName>
                </value>
                <value>
                    <fullName>1971</fullName>
                </value>
                <value>
                    <fullName>1972</fullName>
                </value>
                <value>
                    <fullName>1973</fullName>
                </value>
                <value>
                    <fullName>1974</fullName>
                </value>
                <value>
                    <fullName>1975</fullName>
                </value>
                <value>
                    <fullName>1976</fullName>
                </value>
                <value>
                    <fullName>1977</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Antiguedad_en_la_actividad__c</fullName>
        <label>Antigüedad en la actividad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aporta_ingresos__c</fullName>
        <label>Aporta ingresos</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aporte_cliente__c</fullName>
        <label>Aporte cliente</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aprobado_con_programa_MI_CASA_YA__c</fullName>
        <label>¿Aprobado con programa MI CASA YA?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asunto__c</fullName>
        <label>Asunto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Convenio clientes</fullName>
                    <default>true</default>
                    <label>Convenio clientes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Barrio__c</fullName>
        <label>Barrio</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bonos__c</fullName>
        <label>Bonos</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_digo_ciiu__c</fullName>
        <label>Código ciiu</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Camara_de_comercio__c</fullName>
        <label>Cámara de comercio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Si</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Canal_digital__c</fullName>
        <label>Canal digital</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cargo_que_desempena__c</fullName>
        <label>Cargo que desempeña</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Causal_de_negacion__c</fullName>
        <label>Causal de negacion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cesantias__c</fullName>
        <label>Cesantías</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Check_VIGIA__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Check VIGIA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Circulo_notaria__c</fullName>
        <label>Círculo notaria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad__c</fullName>
        <description>Ciudad de radicación</description>
        <label>Ciudad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_actualizacion_datos__c</fullName>
        <label>Ciudad</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Departamento_actualizacion_datos__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Abejorral</fullName>
                </value>
                <value>
                    <fullName>Ábrego</fullName>
                </value>
                <value>
                    <fullName>Abriaquí</fullName>
                </value>
                <value>
                    <fullName>Acacías</fullName>
                </value>
                <value>
                    <fullName>Acandí</fullName>
                </value>
                <value>
                    <fullName>Acevedo</fullName>
                </value>
                <value>
                    <fullName>Achí</fullName>
                </value>
                <value>
                    <fullName>Agrado</fullName>
                </value>
                <value>
                    <fullName>Aguachica</fullName>
                </value>
                <value>
                    <fullName>Aguada</fullName>
                </value>
                <value>
                    <fullName>Agua De Dios</fullName>
                </value>
                <value>
                    <fullName>Aguazul</fullName>
                </value>
                <value>
                    <fullName>Agustín Codazzi</fullName>
                </value>
                <value>
                    <fullName>Aipe</fullName>
                </value>
                <value>
                    <fullName>Albán</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Alcalá</fullName>
                </value>
                <value>
                    <fullName>Aldana</fullName>
                </value>
                <value>
                    <fullName>Alejandría</fullName>
                </value>
                <value>
                    <fullName>Algarrobo</fullName>
                </value>
                <value>
                    <fullName>Algeciras</fullName>
                </value>
                <value>
                    <fullName>Almaguer</fullName>
                </value>
                <value>
                    <fullName>Almeida</fullName>
                </value>
                <value>
                    <fullName>Altos Del Rosario</fullName>
                </value>
                <value>
                    <fullName>Alvarado</fullName>
                </value>
                <value>
                    <fullName>Amagá</fullName>
                </value>
                <value>
                    <fullName>Amalfi</fullName>
                </value>
                <value>
                    <fullName>Ambalema</fullName>
                </value>
                <value>
                    <fullName>Anapoima</fullName>
                </value>
                <value>
                    <fullName>Ancuyá</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ciudad_de_radicacion__c</fullName>
        <label>Ciudad de radicación</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bogotá</fullName>
                </value>
                <value>
                    <fullName>Barranquilla</fullName>
                </value>
                <value>
                    <fullName>Bucaramanga</fullName>
                </value>
                <value>
                    <fullName>Cali</fullName>
                </value>
                <value>
                    <fullName>Medellín</fullName>
                </value>
                <value>
                    <fullName>Pereira</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ciudad_de_residencia__c</fullName>
        <label>Ciudad de residencia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_laboral__c</fullName>
        <label>Ciudad laboral</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clear__c</fullName>
        <label>Clear</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cliente_deudor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente deudor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Codeudores</relationshipLabel>
        <relationshipName>Codeudores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cliente_prevalidado__c</fullName>
        <label>Cliente prevalidado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Codeudores__c</fullName>
        <label>Codeudores</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codigo_Familia__c</fullName>
        <label>Código Familia</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Compromisos_de_pago__c</fullName>
        <label>Compromisos de pago</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Consecutivo__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>Consecutivo</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Consecutivo_convenio__c</fullName>
        <description>Se actualiza por un flujo tomando como referencia el número de documento en la cuenta</description>
        <externalId>true</externalId>
        <label>Consecutivo convenio</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Convenio__c</fullName>
        <label>Convenio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Convenio_firmado__c</fullName>
        <label>Convenio firmado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Si</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Correo_electronico_1__c</fullName>
        <label>Correo electrónico 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Correspondencia__c</fullName>
        <label>Correspondencia</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Físico</fullName>
                </value>
                <value>
                    <fullName>Correo</fullName>
                </value>
                <value>
                    <fullName>Físico/Correo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credito_aprobado__c</fullName>
        <label>Crédito aprobado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credito_solicitado__c</fullName>
        <label>Crédito solicitado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Departamento_actualizacion_datos__c</fullName>
        <label>Departamento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Antioquia</fullName>
                </value>
                <value>
                    <fullName>Atlántico</fullName>
                </value>
                <value>
                    <fullName>Bogotá D.C.</fullName>
                </value>
                <value>
                    <fullName>Bolívar</fullName>
                </value>
                <value>
                    <fullName>Boyacá</fullName>
                </value>
                <value>
                    <fullName>Caldas</fullName>
                </value>
                <value>
                    <fullName>Casanare</fullName>
                </value>
                <value>
                    <fullName>Cauca</fullName>
                </value>
                <value>
                    <fullName>Cesar</fullName>
                </value>
                <value>
                    <fullName>Chocó</fullName>
                </value>
                <value>
                    <fullName>Córdoba</fullName>
                </value>
                <value>
                    <fullName>Cundinamarca</fullName>
                </value>
                <value>
                    <fullName>Guainía</fullName>
                </value>
                <value>
                    <fullName>Huila</fullName>
                </value>
                <value>
                    <fullName>La Guajira</fullName>
                </value>
                <value>
                    <fullName>Magdalena</fullName>
                </value>
                <value>
                    <fullName>Meta</fullName>
                </value>
                <value>
                    <fullName>Nariño</fullName>
                </value>
                <value>
                    <fullName>Norte De Santander</fullName>
                </value>
                <value>
                    <fullName>Quindío</fullName>
                </value>
                <value>
                    <fullName>Risaralda</fullName>
                </value>
                <value>
                    <fullName>Santander</fullName>
                </value>
                <value>
                    <fullName>Sucre</fullName>
                </value>
                <value>
                    <fullName>Tolima</fullName>
                </value>
                <value>
                    <fullName>Valle</fullName>
                </value>
                <value>
                    <fullName>Amazonas</fullName>
                    <isActive>false</isActive>
                    <label>Amazonas</label>
                </value>
                <value>
                    <fullName>Arauca</fullName>
                    <isActive>false</isActive>
                    <label>Arauca</label>
                </value>
                <value>
                    <fullName>Caquetá</fullName>
                    <isActive>false</isActive>
                    <label>Caquetá</label>
                </value>
                <value>
                    <fullName>Guaviare</fullName>
                    <isActive>false</isActive>
                    <label>Guaviare</label>
                </value>
                <value>
                    <fullName>Putumayo</fullName>
                    <isActive>false</isActive>
                    <label>Putumayo</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Detalle_de_la_solicitud__c</fullName>
        <label>Detalle de la solicitud</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Direccion_de_residencia__c</fullName>
        <label>Dirección de residencia</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direccion_oficina__c</fullName>
        <label>Dirección oficina</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direccion_residencia__c</fullName>
        <label>Direccion residencia</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edad__c</fullName>
        <formula>FLOOR((TODAY() - Fecha_de_nacimiento__c )/365)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Endeudamiento_financiero__c</fullName>
        <label>Endeudamiento financiero</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Endeudamiento_financiero_mas_cuota__c</fullName>
        <label>Endeudamiento financiero mas cuota</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Estado_civil__c</fullName>
        <label>Estado civil</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Soltero</fullName>
                </value>
                <value>
                    <fullName>Casado</fullName>
                </value>
                <value>
                    <fullName>Unión libre</fullName>
                </value>
                <value>
                    <fullName>Divorciado</fullName>
                </value>
                <value>
                    <fullName>Separado</fullName>
                </value>
                <value>
                    <fullName>Viudo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estado_de_aprobacion_Riesgos__c</fullName>
        <label>Estado de aprobación Riegos</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Solicitud de aprobación</fullName>
                    <default>true</default>
                    <label>Solicitud de aprobación</label>
                </value>
                <value>
                    <fullName>Aprobado</fullName>
                </value>
                <value>
                    <fullName>Rechazado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estado_de_la_solicitud__c</fullName>
        <label>Estado de la solicitud</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nueva Solicitud</fullName>
                </value>
                <value>
                    <fullName>Devuelta</fullName>
                </value>
                <value>
                    <fullName>Radicado</fullName>
                </value>
                <value>
                    <fullName>Referenciación</fullName>
                </value>
                <value>
                    <fullName>Digitalización</fullName>
                </value>
                <value>
                    <fullName>Análisis de crédito</fullName>
                </value>
                <value>
                    <fullName>Desistido</fullName>
                </value>
                <value>
                    <fullName>Comité de crédito</fullName>
                </value>
                <value>
                    <fullName>Archivo riesgos</fullName>
                </value>
                <value>
                    <fullName>Archivo operaciones</fullName>
                </value>
                <value>
                    <fullName>Legalizado</fullName>
                </value>
                <value>
                    <fullName>Devuelta a legalización</fullName>
                </value>
                <value>
                    <fullName>Desembolsado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estado_del_cliente__c</fullName>
        <label>Estado del cliente</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospecto</fullName>
                    <default>true</default>
                    <label>Prospecto</label>
                </value>
                <value>
                    <fullName>Cliente credifamilia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estado_del_credito__c</fullName>
        <label>Estado del crédito</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Excepcion__c</fullName>
        <label>Excepción</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ext_1__c</fullName>
        <label>Ext 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extension_laboral__c</fullName>
        <label>Extensión laboral</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fecha_de_cambio_de_condiciones__c</fullName>
        <label>Fecha de cambio de condiciones</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_carta_definitiva__c</fullName>
        <label>Fecha de carta definitiva</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_comite__c</fullName>
        <label>Fecha de comité</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_desembolso__c</fullName>
        <label>Fecha de desembolso</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_desistido__c</fullName>
        <label>Fecha de desistido</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_entrega__c</fullName>
        <label>Fecha de entrega</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_escritura__c</fullName>
        <label>Fecha de escritura</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_expedicion_cc__c</fullName>
        <label>Fecha de expedición cc</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_ingreso_a_empleo_actual__c</fullName>
        <label>Fecha de ingreso a empleo actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_nacimiento__c</fullName>
        <label>Fecha de nacimiento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fng__c</fullName>
        <label>Fng</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fotocopia_Rut_persona_juridica__c</fullName>
        <label>Fotocopia Rut persona jurídica</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Si</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fotocopia_Rut_persona_natural__c</fullName>
        <label>Fotocopia Rut persona natural</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Si</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fotocopia_cedula_de_ciudadania__c</fullName>
        <label>Fotocopia cédula de ciudadanía</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Si</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fotocopia_cedula_representante_legal__c</fullName>
        <label>Fotocopia cédula representante legal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Si</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ganada__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ganada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gastos_financieros__c</fullName>
        <label>Gastos financieros</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gastos_personales__c</fullName>
        <label>Gastos personales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ind_cuota_ingreso_ingreso_neto_dispon__c</fullName>
        <label>Ind cuota ingreso/ingreso neto dispon.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Indicativo_numero_telefonico__c</fullName>
        <formula>IF(OR(ISPICKVAL(Departamento_actualizacion_datos__c,&quot;Bogotá D.C.&quot;), ISPICKVAL(Departamento_actualizacion_datos__c,&quot;Cundinamarca&quot;)),1,
IF(OR(ISPICKVAL(Departamento_actualizacion_datos__c,&quot;Cauca&quot;),ISPICKVAL(Departamento_actualizacion_datos__c,&quot;Valle Del Cauca&quot;),ISPICKVAL(Departamento_actualizacion_datos__c,&quot;Nariño&quot;)),2,
IF(OR(ISPICKVAL(Departamento_actualizacion_datos__c,&quot;Antioquia&quot;),ISPICKVAL(Departamento_actualizacion_datos__c,&quot;Chocó&quot;),ISPICKVAL(Departamento_actualizacion_datos__c,&quot;Córdoba&quot;)),4,
IF(OR(ISPICKVAL(Departamento_actualizacion_datos__c,&quot;Caldas&quot;),ISPICKVAL(Departamento_actualizacion_datos__c,&quot;Quindío&quot;),ISPICKVAL(Departamento_actualizacion_datos__c,&quot;Risaralda&quot;)),6,
IF(OR(ISPICKVAL(Departamento_actualizacion_datos__c,&quot;Norte De Santander&quot;),ISPICKVAL(Departamento_actualizacion_datos__c,&quot;Santander&quot;)),7,
IF(OR(ISPICKVAL(Departamento_actualizacion_datos__c,&quot;Boyacá&quot;),ISPICKVAL(Departamento_actualizacion_datos__c,&quot;Huila&quot;),ISPICKVAL(Departamento_actualizacion_datos__c,&quot;Tolima&quot;)),8,
IF(OR(ISPICKVAL(Departamento_actualizacion_datos__c,&quot;Casanare&quot;),ISPICKVAL(Departamento_actualizacion_datos__c,&quot;Guainía&quot;),ISPICKVAL(Departamento_actualizacion_datos__c,&quot;Meta&quot;)),8,
IF(OR(ISPICKVAL(Departamento_actualizacion_datos__c,&quot;Atlántico&quot;),ISPICKVAL(Departamento_actualizacion_datos__c,&quot;Bolívar&quot;),ISPICKVAL(Departamento_actualizacion_datos__c,&quot;Cesar&quot;)),5,
IF(OR(ISPICKVAL(Departamento_actualizacion_datos__c,&quot;Guajira&quot;),ISPICKVAL(Departamento_actualizacion_datos__c,&quot;Magdalena&quot;),ISPICKVAL(Departamento_actualizacion_datos__c,&quot;Sucre&quot;)),5,0)))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indicativo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ingresos_Familiares__c</fullName>
        <label>Ingresos Familiares</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ingresos_mes__c</fullName>
        <label>Ingresos mes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lugar_de_expedicion__c</fullName>
        <label>Lugar de expedición</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lugar_de_nacimiento__c</fullName>
        <label>Lugar de nacimiento</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monto__c</fullName>
        <label>Monto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Motivo_no_viable__c</fullName>
        <label>Motivo no viable</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Resultado_prevalidador__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Sin cuota inicial</fullName>
                </value>
                <value>
                    <fullName>Puntaje data Crédito</fullName>
                </value>
                <value>
                    <fullName>Antigüedad laboral</fullName>
                </value>
                <value>
                    <fullName>Endeudamiento financiero</fullName>
                </value>
                <value>
                    <fullName>No maneja extractos bancarios</fullName>
                </value>
                <value>
                    <fullName>Mora pagada &lt; 1 año</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>N_escritura__c</fullName>
        <label>N° escritura</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_acta__c</fullName>
        <label>No acta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>